--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,8 @@
-<div>
+<div id="beer-index">
+
+    <img src="/images/beer.png" alt="pint of beer">
+
+    <a href="/beers">Check the Beers!</a>
+    <a href="/random-beer">Check a Random Beer!</a>
 
 </div>
